--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+== LATEST
+
+ * 'ritual' command for creating new gems.
+ * Fix spec_task.
+
 == 0.3.1 2011-09-01
 
  * Better error message when version file is invalid.
