--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+== LATEST
+
+ * Fix building JRuby extensions in 1.9 mode.
+ * Silence Rake warnings when using extensions.
+ * Fix create_makefile call for unnamed extensions in README.
+
 == 0.4.0 2012-01-07
 
  * 'ritual' command for creating new gems.
